Polishing.
Move methods to the right places, introduce factory methods for easier object construction.

Refine test code setup, reuse fixtures, use existing builders for cached release construction.